--- a/Cinestar-app/MainTabbedPage.xaml
+++ b/Cinestar-app/MainTabbedPage.xaml
@@ -9,23 +9,16 @@
     BarBackgroundColor="#051851"        
     BarTextColor="White">
 
-    <TabbedPage.Children>
-        <NavigationPage Title="Početna" IconImageSource="home.png">
-            <x:Arguments>
-                <local:HomePage />
-            </x:Arguments>
-        </NavigationPage>
+    <!-- ❌ UKLONI x:Arguments! Koristi ContentPage direktno -->
+    <ContentPage Title="Početna" IconImageSource="home.png">
+        <local:HomePage />
+    </ContentPage>
 
-        <NavigationPage Title="Filmovi" IconImageSource="film.png">
-            <x:Arguments>
-                <local:Filmovi />
-            </x:Arguments>
-        </NavigationPage>
+    <ContentPage Title="Filmovi" IconImageSource="film.png">
+        <local:Filmovi />
+    </ContentPage>
 
-        <NavigationPage Title="Profil" IconImageSource="profil.png">
-            <x:Arguments>
-                <local:Profil />
-            </x:Arguments>
-        </NavigationPage>
-    </TabbedPage.Children>
+    <ContentPage Title="Profil" IconImageSource="profil.png">
+        <local:Profil />
+    </ContentPage>
 </TabbedPage>
