--- a/Cinestar-app/SplashScreen.xaml
+++ b/Cinestar-app/SplashScreen.xaml
@@ -5,7 +5,7 @@
              Shell.NavBarIsVisible="False">
 
     <Grid>
-        <Image Source="proba1.jpg."
+        <Image Source="proba1.jpg"
                Aspect="AspectFill"
                />
 
@@ -15,10 +15,10 @@
             <Image x:Name="LogoImage" Source="logo.png"
                    WidthRequest="200" HeightRequest="200"
                    Opacity="0" Scale="0.8"/>
-            <Label x:Name="WelcomeLabel" Text="Dobrodošli u CineStar App" 
-                   TextColor="#fff" 
+            <Label x:Name="WelcomeLabel" Text="Dobrodošli u CineStar App"
+                   TextColor="#fff"
                    FontSize="24"
-                   HorizontalOptions="Center"
+                   HorizontalOptions="Center" />
         </VerticalStackLayout>
     </Grid>
 </ContentPage>
