--- a/Cinestar-app/AppShell.xaml
+++ b/Cinestar-app/AppShell.xaml
@@ -1,22 +1,12 @@
-<Shell
-    x:Class="Cinestar_app.AppShell"
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:pages="clr-namespace:Cinestar_app.Pages"
-    Title="Cinestar_app"
-    Shell.TabBarBackgroundColor="#051851"
-       Shell.TabBarForegroundColor="Purple"
-    Shell.TabBarTitleColor="Purple"
-    Shell.TabBarUnselectedColor="Gray"
-    
-    >
+﻿<Shell xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+       xmlns:local="clr-namespace:Cinestar_app"
+       x:Class="Cinestar_app.AppShell">
 
-    <TabBar >
-        <ShellContent Title="Pocetna" Icon="home.png" ContentTemplate="{DataTemplate pages:MainPage}" />
-        <ShellContent Title="Filmovi" Icon="film.png" ContentTemplate="{DataTemplate pages:Filmovi}" />
-        <ShellContent Title="LoyaltyBodovi" Icon="bodovi.png" ContentTemplate="{DataTemplate pages:LoyaltyBodovi}" />
-        <ShellContent Title="Profile" Icon="profil.png" ContentTemplate="{DataTemplate pages:Profil}" />
-    </TabBar>
-
-
+    <ShellContent Title="Home" 
+                  ContentTemplate="{DataTemplate local:HomePage}"
+                  Route="HomePage"/>
+    <ShellContent Title="CityPicker" 
+                  ContentTemplate="{DataTemplate local:CityPickerPage}"
+                  Route="CityPickerPage"/>
 </Shell>
