--- a/Cinestar-app/RegistracijaPage.xaml
+++ b/Cinestar-app/RegistracijaPage.xaml
@@ -1,6 +1,6 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Cinestar_app.Pages.RegistracijaPage"
+             x:Class="Cinestar_app.RegistracijaPage"
              BackgroundColor="#051851"
              Title="Registracija">
 
@@ -8,9 +8,9 @@
         <VerticalStackLayout Padding="20" Spacing="15">
 
             <Label Text="REGISTRACIJA"
-                   FontSize="24"
+                   FontSize="24" />
 
-            <Entry x:Name="ImeEntry" Placeholder="Ime" TextColor="White"/>
+            <Entry x:Name="ImeEntry" Placeholder="Ime" TextColor="White" />
             <Entry x:Name="PrezimeEntry" Placeholder="Prezime" TextColor="White"/>
             <Entry x:Name="EmailEntry" Placeholder="Email"
                    Keyboard="Email" TextColor="White"/>
