--- a/Cinestar-app/LoyaltyBodovi.xaml
+++ b/Cinestar-app/LoyaltyBodovi.xaml
@@ -72,7 +72,8 @@ Očekuju te i zvjezdice dobrodošlice. Jednom kada si registriran online ili put
 
                         <Label Text="🎟️ ČLANSTVO - Članstvo je besplatno i njemu  prvom registracijom                                                
                                ⭐ SKUPLJANJE ZVJEZDICA - Kupuj ulaznice i proizvode koristeći članstvo jer za svaki potrošeni 1 BAM dobivaš 1 zvjezdicu. Zvjezdice vrijede godinu dana.                                                                                                      
-                               🔄 ZAMJENA ZVJEZDICA ZA KUPONE -  Zvjezdice zamijeni za kupone u online trgovini. Kupon vrijedi 30 dana od zamjene."
+                               🔄 ZAMJENA ZVJEZDICA ZA KUPONE -  Zvjezdice zamijeni za kupone u online trgovini. Kupon vrijedi 30 dana od zamjene.                                                                                     
+                               🛒 POPUST NA PROIZVODE - Naši članovi ostvaruju popust na odabrane proizvode."
                                
                         FontSize="14"
                                TextColor="White"
