--- a/Cinestar-app/FilmDetalji.xaml
+++ b/Cinestar-app/FilmDetalji.xaml
@@ -1,12 +1,16 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Cinestar_app.FilmDetalji"
-             Title="FilmDetalji">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to Film detaljiii"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             BackgroundColor="#051851">
+
+    <ScrollView>
+        <StackLayout Padding="10">
+            <Image x:Name="PosterImage" HeightRequest="300" Aspect="AspectFit"/>
+            <Label x:Name="TitleLabel" TextColor="White" FontSize="20" FontAttributes="Bold"/>
+            <Label x:Name="YearLabel" TextColor="LightGray"/>
+            <Label x:Name="GenreLabel" TextColor="LightGray"/>
+            <Label x:Name="CityLabel" TextColor="Orange"/>
+            <Label x:Name="PlotLabel" TextColor="White"/>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
