--- a/Cinestar-app/RegistracijaPage.xaml
+++ b/Cinestar-app/RegistracijaPage.xaml
@@ -1,6 +1,6 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Cinestar_app.Pages.RegistracijaPage"
+             x:Class="Cinestar_app.RegistracijaPage"
              BackgroundColor="#051851"
              Title="Registracija">
 
