--- a/Cinestar-app/FilmDetalji.xaml
+++ b/Cinestar-app/FilmDetalji.xaml
@@ -1,12 +1,14 @@
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Cinestar_app.FilmDetalji"
+             Title="Detalji filma"
              BackgroundColor="#051851">
 
     <ScrollView>
-        <StackLayout Padding="10">
-            <Image x:Name="PosterImage" HeightRequest="300" Aspect="AspectFit"/>
-            <Label x:Name="TitleLabel" TextColor="White" FontSize="20" FontAttributes="Bold"/>
+        <StackLayout Padding="10" Spacing="10">
+            <Image x:Name="PosterImage" HeightRequest="300"/>
+            <Label x:Name="TitleLabel" FontSize="22" FontAttributes="Bold" TextColor="White"/>
             <Label x:Name="YearLabel" TextColor="LightGray"/>
             <Label x:Name="GenreLabel" TextColor="LightGray"/>
             <Label x:Name="CityLabel" TextColor="Orange"/>
